[package]
name = "fedistar"
version = "0.0.0"
crate-type = ["staticlib", "cdylib", "rlib"]
description = "A Tauri App"
authors = ["h3poteto"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0.141"
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.9.2", features = ["image-png"] }
sqlx  = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
directories = "6.0.0"
megalodon = "1.1.1"
tracing = "0.1.41"
reqwest = { version = ">=0.12.24", features = ["json", "multipart", "stream"] }
scraper = "0.23.1"
url = "2.5.4"
simplelog = "0.12.2"
once_cell = "1.21.3"
rust-i18n = "3.1.5"
base64 = "0.21"
tauri-plugin-window-state = { version = "2.4.1" }
open = "5.3.2"
font-kit = "0.14.3"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-os = "2.3.2"
tauri-plugin-process = "2.3.1"
tauri-plugin-http = "2.5.4"
tauri-plugin-notification = "2.3.3"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-shell = "2.3.3"
# We can't compile with 0.14.0 with html5ever 0.29.1.
# We don't refer to this library directly.
markup5ever = "0.14.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

devtools = [ "tauri/devtools" ]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3.1"


[package.metadata.i18n]
# The available locales for your application, default: ["en"].
available-locales = ["en", "ja", "it", "pt-BR", "fr", "zh-CN", "de", "ko", "es-ES", "id", "pl", "ia"]

# The default locale, default: "en".
default-locale = "en"

# Path for your translations YAML file, default: "locales".
# This config for let `cargo i18n` command line tool know where to find your translations.
# You must keep this path is same as the path you pass to `rust_i18n::i18n!` method.
load-path = "locales"
